# agents

./: .env.example  .gitignore  README.md  moon.yml  pyproject.toml
.github/workflows/: ci.yml
src/fractionax_agents/: __init__.py  admin_store.py  agent.py  catalogue_import.py  compliance.py  config.py  copilot.py  db.py  deals.py  llm.py  memo.py  oracle.py  seed_deals.json  server.py  structured.py  tools.py
tests/: conftest.py  test_admin_store.py  test_catalogue_import.py  test_catalogue_override.py  test_compliance.py  test_copilot.py  test_db.py  test_deals.py  test_memo.py  test_oracle.py  test_server.py  test_tools.py
