[project]
name = "fractionax-agents"
version = "0.0.0"
description = "FractionAX AI agents service (FastAPI + Anthropic Claude)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.69",
  "openai>=1.50",  # MiniMax failover via its OpenAI-compatible API
  "httpx>=0.28",  # Pyth Hermes price-feed client
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.11",
  "pydantic-settings>=2.7",
  "fractionax-core",
  "sqlalchemy>=2.0.36",
]

# fractionax-core is the shared Python domain library (libs/py-core in the
# meta-monorepo). Resolved by path, so develop this service from the meta-repo.
[tool.uv.sources]
fractionax-core = { path = "../../libs/py-core", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx>=0.28",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fractionax_agents"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Not strict: the agent loop bridges the Anthropic SDK's response (ContentBlock)
# and request (ContentBlockParam) types, which don't unify cleanly under strict mode.
[tool.mypy]
python_version = "3.13"
files = ["src"]
disallow_untyped_defs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
